Image wrap background undertoe issue fixed with display of flex.

--- a/src/components/sections/Projects/Project/Project.module.scss
+++ b/src/components/sections/Projects/Project/Project.module.scss
@@ -168,6 +168,7 @@
         .img__wrap {
             background: $eerieBlack;
             border-radius: $borderRadius;
+            display: flex;
 
             @include breakpoint(md) {
                 background: $bloodRed;
